# cohort-rfm-ecommerce

./: .gitignore  README.md  descargar_datos.py  informe.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analisis/: cohortes.py  graficos.py  limpieza.py  rfm.py
datos/: muestra.csv
tests/: test_cohortes.py  test_graficos.py  test_limpieza.py  test_rfm.py
